fixing a small error with spacing with the search element

--- a/style/style.scss
+++ b/style/style.scss
@@ -215,8 +215,7 @@ header{
   .search{
     @include span-columns(8.8);
     height:50px;
-    margin:0;
-    padding-top: 2%;
+    margin:3% 0 0 0;
     padding: 0 0 15px;
     background-color: #fff;
     border-bottom: 1px solid #ddd;
